refactor(EatInOrder) : 주문아이템 리팩터링
1. 필요한 정책 추가
2. 테스트코드작성